WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170805
Don't invalidate composition for style changes in non-composited layers
https://bugs.webkit.org/show_bug.cgi?id=170805
Summary
Don't invalidate composition for style changes in non-composited layers
Antti Koivisto
Reported
2017-04-13 02:36:54 PDT
They can only affect composition via layout so invalidation during style change is unnecessary. Composition updates are expensive, this can save a lot of work.
Attachments
patch
(2.35 KB, patch)
2017-04-13 02:45 PDT
,
Antti Koivisto
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-elcapitan-wk2
(1016.70 KB, application/zip)
2017-04-13 04:05 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews123 for ios-simulator-wk2
(908.19 KB, application/zip)
2017-04-13 04:23 PDT
,
Build Bot
no flags
Details
patch
(6.09 KB, patch)
2017-04-13 06:18 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(6.07 KB, patch)
2017-04-13 06:42 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(8.63 KB, patch)
2017-04-13 08:24 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-04-13 02:45:55 PDT
Created
attachment 306981
[details]
patch
Build Bot
Comment 2
2017-04-13 04:05:47 PDT
Comment on
attachment 306981
[details]
patch
Attachment 306981
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/3528381
New failing tests: css3/blending/blend-mode-isolation-flags-turn-off-blending.html css3/blending/blend-mode-isolation-flags-turn-on-stacking-context.html
Build Bot
Comment 3
2017-04-13 04:05:48 PDT
Created
attachment 306982
[details]
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4
2017-04-13 04:23:11 PDT
Comment on
attachment 306981
[details]
patch
Attachment 306981
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3528383
New failing tests: css3/blending/blend-mode-isolation-flags-turn-off-blending.html css3/blending/blend-mode-isolation-flags-turn-on-stacking-context.html
Build Bot
Comment 5
2017-04-13 04:23:12 PDT
Created
attachment 306984
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Antti Koivisto
Comment 6
2017-04-13 06:18:42 PDT
Created
attachment 306986
[details]
patch
Antti Koivisto
Comment 7
2017-04-13 06:42:39 PDT
Created
attachment 306987
[details]
patch
Antti Koivisto
Comment 8
2017-04-13 08:24:44 PDT
Created
attachment 306989
[details]
patch
Radar WebKit Bug Importer
Comment 9
2017-04-13 08:35:32 PDT
<
rdar://problem/31606185
>
Antti Koivisto
Comment 10
2017-04-13 16:21:22 PDT
https://trac.webkit.org/r215347
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug